--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Bryan Elvis Kerster
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Bryan Elvis Kerster</h1>
+	<p>I'm a data scientist with a PhD in Cognitive Science.</p>
+	<p>You can learn more about me on my <a href="https://www.linkedin.com/in/bkerster">linkedin.</a></p>
 </div><!-- /.blurb -->
