--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Bryan Elvis Kerster
 ---
 <div class="blurb">
 	<h1>Bryan Elvis Kerster</h1>
-	<p>I'm a data scientist with a PhD in Cognitive Science.</p>
-	<p>You can learn more about me on my <a href="https://www.linkedin.com/in/bkerster">linkedin.</a></p>
+	<p>I'm a data scientist with a PhD in Cognitive Science.<br>
+	You can learn more about me on my <a href="https://www.linkedin.com/in/bkerster">linkedin.</a></p>
 </div><!-- /.blurb -->
